# akrobat-sim

./: README.md
hexapod/: CMakeLists.txt  README.md  README_hexapod_navigation.md  package.xml
hexapod/config/: base_local_planner_params.yaml  config.rviz  costmap_common_params.yaml  global_costmap_params.yaml  hexapod.yaml  local_costmap_params.yaml  move_base_params.yaml
hexapod/hexapod_description/meshes/kinect_ros/: model.sdf
hexapod/hexapod_description/urdf/: gazebo.plugins.xacro  hexapod.xacro  laser.xacro  links_joints.xacro  res.urdf
hexapod/hexapod_gazebo/models/brick_wall/: model.sdf
hexapod/hexapod_gazebo/worlds/: myWorld.world
hexapod/hexapod_mapping/: gmapping_params.yaml  map.pgm  map.yaml
hexapod/hexapod_teleop/: hexapod_teleop.py
hexapod/include/akrobat/: Akrobat.h  ControlRandomSampling.h  FootConfiguration.h  LegSetting.h  akrobat_init.h
hexapod/launch/: akrobat_walk.launch  amcl.launch  control.launch  gazebo.launch  hexapod_gmapping.launch  hexapod_navigation.launch  hexapod_teleop.launch  model.launch  move_base.launch  rviz.launch
hexapod/src/akrobat/: Akrobat.cpp  ControlRandomSampling.cpp  FootConfiguration.cpp  JointStateToDynamixel.cpp  JointStateToGazebo.cpp  LegSetting.cpp  akrobat_main.cpp  helper.txt
hexapod/src/pugixml/: pugixml.cpp
hexapod/urdf/: hexapod.gv  hexapod.xacro  leg-1.xacro  leg-2.xacro  leg-3.xacro  leg-4.xacro  leg-5.xacro  leg-6.xacro
hexapod/worlds/: default.world
